--- a/less/ukrgb_tweeks.less
+++ b/less/ukrgb_tweeks.less
@@ -2,7 +2,7 @@
   padding: 5px 15px;
 }
 .breadcrumbs {
-  margin-left: 0px;
+  margin-left: 0;
 
   li {
     display: inline-block;
